// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StreamingBitmap LED dot snapshots > leading blank area is all dots-off 1`] = `
"....................
....................
....................
....................
....................
....................
....................
....................
....................
....................
....................
....................
...................."
`;

exports[`StreamingBitmap LED dot snapshots > mixed segments render in correct order 1`] = `
"................................................................................
.........................................RR.....................................
..Y...Y.....Y.....Y.......Y............RRRRRR...........#...#...#.#.....#...#...
......Y.....Y.....Y...Y...Y...........RRRRRRRR..........#...#...#.#.....#...#...
.Y.Y..Y.....Y.....Y...Y...Y...........RRRRRRRR..........#...#...#.#.....#...#...
.Y.Y..Y.....Y.....Y.......Y..........RRRRRRRRRR.........#...#...#.#.....#...#...
YYYYY.Y.....Y.....Y.Y.....Y...........RRRRRRRR..........#...#...#.#.....#...#...
Y...Y.Y.....Y.....Y.......Y...........RRRRRRRR..........#...#...#.#.....#...#...
Y...Y.Y.....Y.....Y.......Y............RRRRRR...........#...#...#.#.....#...#...
Y...Y.Y.....Y.....Y...Y...Y..............RR.............#...#...#.#.............
................................................................................
................................................................................
................................................................................"
`;

exports[`StreamingBitmap LED dot snapshots > normal text renders consistently at text start 1`] = `
"........................................
........................................
#...#.#.....#.....#.....#...#...........
#...#.#.....#.....#.....#...#...........
#...#.#.....#.....#.....#...#...........
#...#.#.....#.....#.....#...#...........
#...#.#.....#.....#.....#...#...........
#...#.#.....#.....#.....#...#...........
#...#.#.....#.....#.....#...#...........
#...#.#.....#.....#.....................
........................................
........................................
........................................"
`;

exports[`StreamingBitmap LED dot snapshots > sep text renders with R dots 1`] = `
"....................
...........RR.......
.........RRRRRR.....
........RRRRRRRR....
........RRRRRRRR....
.......RRRRRRRRRR...
........RRRRRRRR....
........RRRRRRRR....
.........RRRRRR.....
...........RR.......
....................
....................
...................."
`;

exports[`StreamingBitmap LED dot snapshots > yellow text renders with Y dots 1`] = `
"........................................
........................................
Y...Y.Y.....Y.Y.Y.......................
Y...Y.Y.....Y.Y.Y.Y.....................
Y...Y.Y.....Y.Y.Y.Y.....................
Y...Y.Y.....Y.Y.Y.......................
Y...Y.Y.....Y.Y.Y.....Y.................
Y...Y.Y.....Y.Y.Y.....Y.................
Y...Y.Y......Y.Y......Y.................
Y...Y.Y......Y.Y........................
........................................
........................................
........................................"
`;
